objects/MMPJ_TOPG_4P__c.object
<CustomObject>
    <description>Used for MMPJ TopGun app</description>
    <fields>
        <fullName>MMPJ_TOPG_Comment__c</fullName>
        <label>Comment</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>MMPJ_TOPG_Meeting__c</referenceTo>
        <relationshipName>Meeting_4P</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Rank__c</fullName>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Topic__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Place / Channel</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Promotion / Communication</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Meeting 4P</label>
    <nameField>
        <label>4P Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting 4P</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>